# quickjs

./: .gitignore  BASE_COMMIT.txt  CMakeLists.txt  Changelog  LICENSE  Makefile  README.md  TODO  VERSION  build.sh  cutils.c  cutils.h  dtoa.c  dtoa.h  flake.nix  jscompress.c  libbf.c  libbf.h  libregexp-opcode.h  libregexp.c  libregexp.h  libunicode-table.h  libunicode.c  libunicode.h  list.h  premake5.lua  qjs.c  qjsc.c  qjscalc.c  qjscalc.js  quickjs-atom.h  quickjs-bjson.c  quickjs-jsx.h  quickjs-libc-min.c  quickjs-libc-min.h  quickjs-libc.c  quickjs-libc.h  quickjs-opcode.h  quickjs-port.c  quickjs-port.h  (+17 more)
.github/workflows/: all.yml  ci.yml  release-artifacts.yml
builtins/: js-disposable.c  js-disposable.h
compat/: test-closefrom  test-closefrom.c
doc/: globals.d.ts  jsbignum.html  jsbignum.texi  jsx.md  os.d.ts  quickjs.html  quickjs.texi  std.d.ts
examples/: hello_module.js  http_client.js  http_server.js  message.json  pi_bigdecimal.js  pi_bigint.js  point.c  test_point.js
fuzz/: README  fuzz.dict  fuzz_common.c  fuzz_common.h  fuzz_compile.c  fuzz_eval.c  fuzz_module_export.cc  fuzz_regexp.c  generate_dict.js
storage/: quickjs-storage.c  quickjs-storage.h
storage/doc/: README.md  Storage.Index.md  Storage.md  architecture.md  introduction.md
storage/dybase/: CHANGES
storage/dybase/doc/: dybase.html
storage/dybase/include/: dybase.h
storage/dybase/src/: btree.cpp  btree.h  buffer.h  database.cpp  database.h  dybase.cpp  file.cpp  file.h  hashtab.h  (+4 more)
tests/: assert.js  bjson.c  bug1296.js  bug1301.js  bug1302.js  bug1305.js  fixture_cyclic_import.js  microbench.js  test-obj-call.js  test-units.js  test262.patch  test_bigfloat.js  test_bigint.js  test_bignum.js  test_bjson.js  test_builtin.js  test_cyclic_import.js  test_language.js  test_line_column.js  test_loop.js  test_op.js  test_qjscalc.js  test_std.js  test_worker.js  test_worker_module.js
tests/JSX/: test-jsx.js
tests/storage/: test-all.js  test-basic.js  test-classes.js  test-index.js  test.db
win/: getopt.h  premake-vs2017.bat  premake-vs2019.bat  stdatomic.h
win32/: getopt.c  getopt.h  stdatomic.h
